# zero2prod

./: Cargo.toml  docker-compose.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: mod.rs
tests/: health_check.rs
